--- a/app.css
+++ b/app.css
@@ -3,9 +3,32 @@ body {
 	background-size: cover;
 	background-position: center;
 	font-family:  Lato;
+	color: white;
+}
+
+html {
+	/* for image centre entire webpage */
+	height: 100%;
 }
 
 #content {
 	text-align: center;
 	padding-top: 25%;
+	/* rgba for transparency */
+	text-shadow: 0px 4px 3px rgba(0,0,0,0.4),
+				 0px 8px 13px rgba(0,0,0,0.1),
+				 0px 18px 23px rgba(0,0,0,0.1);
+}
+
+h1 {
+	font-weight: 700;
+	/* 5x parent element size */
+	font-size: 5em;
+}
+
+hr {
+	width: 550px;
+	border-top: 1px sold #f8f8f8;
+	/* light grey bottom of hr to simualte shadow */
+	border-bottom: 1px solid rgba(0,0,0,0.2);
 }
